<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnFGTS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculo_fgts" />

            <Button
                android:id="@+id/btnSeguroDesemprego"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_lculo_seguro_desemprego" />

            <Button
                android:id="@+id/btnINSS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_lculo_inss" />

        </LinearLayout>




</ScrollView>